# warlock

./: CMakeLists.txt  mk_builddir.sh
c++-src/: LoadNode.h  MemNode.h  OpNode.h  StoreNode.h
etc/: version_config.h.in  warlock.h.in
include/: FgEdge.h  FgNode.h  FlowGraph.h  IrBlock.h  IrNode.h  IrOperand.h  OpType.h  warlock.h
